[package]
name = "esp32_examples"
version = "0.1.0"
authors = ["Eric Douglass <dougli1sqrd@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp32c3-hal = { version = "0.2.0", features = ["direct-boot"] }
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.2.0", features = ["esp32c3", "panic-handler", "print-uart"] }
riscv-rt = { version = "0.9", optional = true }
critical-section  = "1.1.0"
riscv = "0.8.0"
esp-println       = { version = "0.2.2", features = ["esp32c3"] }

[features]
default = ["rt"]
rt = ["riscv-rt"]
